@@ -1,0 +1,6 @@
+/abc2midi.txt/1.1.1.1/Thu Sep 28 18:17:04 2006//
+/coding.txt/1.1.1.1/Thu Sep 28 18:17:04 2006//
+/midi2abc.txt/1.1.1.1/Thu Sep 28 18:17:04 2006//
+/split.abc/1.1.1.1/Thu Sep 28 18:17:04 2006//
+/yaps.txt/1.1.1.1/Thu Sep 28 18:17:04 2006//
+D
